--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <head>
-<title> Unity Hospital | Home </title>
+<title> Unity Hospital | MyHome </title>
 
 		<!-- Web Fonts -->
 		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin">
@@ -35,7 +35,7 @@
 	<div class="col-md-6">
 			<ul class="list-inline top-v1-contacts">
 			<li>
-			<i class="fa fa-envelope"></i> Email: unityhospital@gmail.com
+			<i class="fa fa-envelope"></i> Email at: unityhospital@gmail.com
 			</li>
 			<li>
 			<i class="fa fa-phone"></i> Contact no : 88666 00555
@@ -237,7 +237,7 @@
 		<!--=== Welcome to Unity===-->
 		<div class="container content-md welcomeSection">
 		<div class="row section1">
-		<div class="col-md-6" style="margin-bottom: 40px;" style="border:2px solid black background: green;">
+		<div class="col-md-6" style="margin-bottom: 40px;border:2px solid black; background: green">
 			<h2 class="title-v2">WELCOME TO <span style="color: #72c02c;"> UNITY </span></h2>
 			<p style="text-align: justify; font-size: 14px;">A state-of-the art modern facility in the heart of the Gujarat state, it is spread over 10 acres and has a built-up area of over 440000 square feet. Currently the hospital has 300+ beds with a capacity to expand to 400 beds.</p>
 			<p style="text-align: justify; font-size: 14px;">Unity Hospital, Ahmedabad is a tertiary care flagship unit of the Unity Hospitals Group.The Hospital focuses on centres of excellence like Cardiac Sciences, Neuro Sciences, Orthopaedics including Knee Replacement, Hip Replacement and Spine Surgery, Cancer, Emergency Medicine and Solid Organ Transplants besides the complete range of more than 35 allied medical disciplines under the same roof.</p> 
